# ABCDE

./: .gitmodules  Makefile.am  configure.ac
nsis/: ABCDE.nsis.in  mingwbuild.in
test/: crossover_test.cpp
